--- a/SS2t/SS2t.ipynb
+++ b/SS2t/SS2t.ipynb
@@ -235,28 +235,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3164, 327, 269, 269, 224, 224, 224, 220, 142, 134.5, 6.04]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m = [m1, m2, m3, m4, m5]\n",
-    "f = np.array([m[i][8]/m[i][0] for i in range(len(m))])\n",
-    "m1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -450,6 +428,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3164, 327, 269, 269, 224, 224, 224, 220, 142, 134.5, 6.04]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = [m1, m2, m3, m4, m5]\n",
+    "f = np.array([m[i][8]/m[i][0] for i in range(len(m))])\n",
+    "m1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -502,6 +502,103 @@
     "plt.ylabel('Selection Efficiency (ε)', fontsize=15)\n",
     "plt.legend(loc='lower right')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>$M_{H}$</th>\n",
+       "      <th>Signal Cross Section in Paper (fb)</th>\n",
+       "      <th>My Result (fb)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>200 GeV</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>6.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>300 GeV</td>\n",
+       "      <td>4.12</td>\n",
+       "      <td>5.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>400 GeV</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>500 GeV</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>1.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>600 GeV</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   $M_{H}$  Signal Cross Section in Paper (fb)  My Result (fb)\n",
+       "0  200 GeV                                3.84            6.04\n",
+       "1  300 GeV                                4.12            5.38\n",
+       "2  400 GeV                                2.35            3.26\n",
+       "3  500 GeV                                1.14            1.78\n",
+       "4  600 GeV                                0.75            1.00"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = [\n",
+    "     '200 GeV',\n",
+    "     '300 GeV',\n",
+    "     '400 GeV',\n",
+    "     '500 GeV',\n",
+    "     '600 GeV'\n",
+    "]\n",
+    "n1 = [3.84, 4.12, 2.35, 1.14, 0.75]\n",
+    "n2 = [m1[-1], m2[-1], m3[-1], m4[-1], m5[-1]]\n",
+    "fd = pd.DataFrame({r'$M_{H}$': name,\n",
+    "    'Signal Cross Section in Paper (fb)': n1,\n",
+    "                   'My Result (fb)': n2\n",
+    "                   })\n",
+    "fd"
    ]
   },
   {
