--- a/3b3l/3b3l.ipynb
+++ b/3b3l/3b3l.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1027/1027 [00:02<00:00, 359.04it/s]\n",
+      "100%|██████████| 44/44 [00:00<00:00, 69.47it/s]\n",
+      "100%|██████████| 36/36 [00:00<00:00, 115.01it/s]\n",
+      "100%|██████████| 34/34 [00:00<00:00, 293.38it/s]\n",
+      "100%|██████████| 28/28 [00:00<00:00, 101.14it/s]\n",
+      "100%|██████████| 28/28 [00:00<00:00, 44.98it/s]\n",
+      "100%|██████████| 28/28 [00:00<00:00, 33.76it/s]\n",
+      "100%|██████████| 22/22 [00:00<00:00, 273.34it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[5000, 44, 36, 34, 28, 28, 28, 22, 22],\n",
+       " [16.6, 0.0044, 0.07304000000000001, 0.0009360170938610043]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def f(deltaeta, deltaphi):\n",
     "    return np.sqrt(deltaeta**2 + deltaphi**2)\n",
@@ -169,15 +195,42 @@
     "        if ht > 320:\n",
     "            event_ht.append(i)\n",
     "                \n",
-    "    cs = cs * 1000\n",
-    "    csf = cs * len(event_ht)/EventSize\n",
+    "    \n",
+    "    cs_b = cs * 1000\n",
+    "    sel_eff = len(event_ht)/EventSize\n",
+    "    uncertainty = np.sqrt(sel_eff * (1-sel_eff)/ EventSize)\n",
+    "    cs_f = cs_b * len(event_ht)/EventSize\n",
     "                \n",
-    "    return [EventSize, len(event_signal), len(event_lep), len(event_jet), len(event_emiss), len(event_deltaR_bl), len(event_deltaR_bb), len(event_deltaR_ll), len(event_ht), cs, csf]"
+    "    return [[EventSize, len(event_signal), len(event_lep), len(event_jet), len(event_emiss), len(event_deltaR_bl), len(event_deltaR_bb), len(event_deltaR_ll), len(event_ht)], [cs_b, sel_eff, cs_f, uncertainty]]\n",
+    "\n",
+    "y1 = uproot.open('../root/MG5_aMC_v2_7_3/ttZ/Events/run_02/tag_1_delphes_events.root')\n",
+    "y2 = function(y1, 0.0166)\n",
+    "y2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.320512820512821"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.01298 * 1000 * 1/1.56"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
