--- a/Background/Background.ipynb
+++ b/Background/Background.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def f(deltaeta, deltaphi):\n",
     "    return np.sqrt(deltaeta**2 + deltaphi**2)\n",
-    "def function(f_Att, cs):\n",
+    "def function(f_Att, cs, k_factor):\n",
     "    # Define Tree\n",
     "    tree_electron_Att = f_Att['Delphes;1/Electron']\n",
     "    tree_muon_Att = f_Att['Delphes;1/Muon']\n",
@@ -151,58 +151,59 @@
     "    sel_eff = len(event_ht)/EventSize\n",
     "    uncertainty = np.sqrt(sel_eff * (1-sel_eff)/ EventSize)\n",
     "    cs_f = cs_b * len(event_ht)/EventSize\n",
+    "    cs_ff = cs_f * k_factor\n",
     "                \n",
-    "    return [[EventSize, len(event_signal), len(event_lep), len(event_jet), len(event_emiss), len(event_deltaR_bl), len(event_deltaR_bb), len(event_deltaR_ll), len(event_ht)], [cs_b, sel_eff, cs_f, uncertainty]]"
+    "    return [[EventSize, len(event_signal), len(event_lep), len(event_jet), len(event_emiss), len(event_deltaR_bl), len(event_deltaR_bb), len(event_deltaR_ll), len(event_ht)], [cs_b, sel_eff, cs_f, uncertainty, cs_ff]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1820/1820 [00:01<00:00, 1197.82it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 480.43it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 299.28it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 1244.26it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 347.26it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 166.48it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 219.16it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 1379.55it/s]\n",
-      "100%|██████████| 1027/1027 [00:00<00:00, 1070.00it/s]\n",
-      "100%|██████████| 44/44 [00:00<00:00, 508.38it/s]\n",
-      "100%|██████████| 36/36 [00:00<00:00, 328.28it/s]\n",
-      "100%|██████████| 34/34 [00:00<00:00, 1160.36it/s]\n",
-      "100%|██████████| 28/28 [00:00<00:00, 436.19it/s]\n",
-      "100%|██████████| 28/28 [00:00<00:00, 140.00it/s]\n",
-      "100%|██████████| 28/28 [00:00<00:00, 184.13it/s]\n",
-      "100%|██████████| 22/22 [00:00<00:00, 2171.32it/s]\n",
-      "100%|██████████| 1281/1281 [00:01<00:00, 1117.40it/s]\n",
-      "100%|██████████| 6/6 [00:00<00:00, 320.73it/s]\n",
-      "100%|██████████| 3/3 [00:00<00:00, 243.06it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 783.03it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 257.49it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 81.80it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 184.81it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 831.46it/s]\n"
+      "100%|██████████| 8870/8870 [00:09<00:00, 888.97it/s] \n",
+      "100%|██████████| 153/153 [00:00<00:00, 549.42it/s]\n",
+      "100%|██████████| 109/109 [00:00<00:00, 252.15it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 1612.07it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 462.93it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 127.39it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 180.95it/s]\n",
+      "100%|██████████| 89/89 [00:00<00:00, 1671.37it/s]\n",
+      "100%|██████████| 10560/10560 [00:11<00:00, 953.56it/s] \n",
+      "100%|██████████| 481/481 [00:01<00:00, 435.67it/s]\n",
+      "100%|██████████| 315/315 [00:01<00:00, 234.92it/s]\n",
+      "100%|██████████| 302/302 [00:00<00:00, 792.91it/s]\n",
+      "100%|██████████| 254/254 [00:00<00:00, 291.77it/s]\n",
+      "100%|██████████| 254/254 [00:02<00:00, 97.50it/s] \n",
+      "100%|██████████| 254/254 [00:01<00:00, 148.50it/s]\n",
+      "100%|██████████| 234/234 [00:00<00:00, 1971.01it/s]\n",
+      "100%|██████████| 6717/6717 [00:08<00:00, 768.08it/s] \n",
+      "100%|██████████| 2717/2717 [00:07<00:00, 385.91it/s]\n",
+      "100%|██████████| 1748/1748 [00:07<00:00, 225.77it/s]\n",
+      "100%|██████████| 1704/1704 [00:01<00:00, 1280.42it/s]\n",
+      "100%|██████████| 1592/1592 [00:04<00:00, 386.26it/s]\n",
+      "100%|██████████| 1592/1592 [00:12<00:00, 126.20it/s]\n",
+      "100%|██████████| 1592/1592 [00:08<00:00, 188.05it/s]\n",
+      "100%|██████████| 1492/1492 [00:00<00:00, 2028.14it/s]\n"
      ]
     }
    ],
    "source": [
-    "y1 = uproot.open('../root/MG5_aMC_v2_7_3/ttW/Events/run_03/tag_1_delphes_events.root')\n",
-    "y2 = uproot.open('../root/MG5_aMC_v2_7_3/ttZ/Events/run_02/tag_1_delphes_events.root')\n",
-    "y3 = uproot.open('../root/MG5_aMC_v2_7_3/tZj/Events/run_01/tag_1_delphes_events.root')\n",
-    "ttW = function(y1, 0.04497)\n",
-    "ttZ = function(y2, 0.01659)\n",
-    "tZj = function(y3, 0.01289)"
+    "y1 = uproot.open('../root/MG5_aMC_v2_7_3/ttW/Events/run_04/tag_1_delphes_events.root')\n",
+    "y2 = uproot.open('../root/MG5_aMC_v2_7_3/ttZ/Events/run_03/tag_1_delphes_events.root')\n",
+    "y3 = uproot.open('../root/MG5_aMC_v2_7_3/tttt/Events/run_01/tag_1_delphes_events.root')\n",
+    "ttW = function(y1, 0.003944, 1.35)\n",
+    "ttZ = function(y2, 0.01687, 1.56)\n",
+    "tttt = function (y3, 0.0006133, 2.04)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,92 +229,92 @@
        "      <th></th>\n",
        "      <th>Selection Cut (3b3l)</th>\n",
        "      <th>ttW+j</th>\n",
+       "      <th>4t</th>\n",
        "      <th>ttZ+j</th>\n",
-       "      <th>tZj</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Input Event Size</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>5000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>50000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3b3l Signature</td>\n",
-       "      <td>29</td>\n",
-       "      <td>44</td>\n",
-       "      <td>6</td>\n",
+       "      <td>153</td>\n",
+       "      <td>2717</td>\n",
+       "      <td>481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Jet Selection</td>\n",
-       "      <td>15</td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1748</td>\n",
+       "      <td>315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>lepton Selection</td>\n",
-       "      <td>15</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>$E_{T}^{miss}$ &gt; 30GeV</td>\n",
-       "      <td>15</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Δ$R_{bl}$ &gt; 0.4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Δ$R_{bb}$ &gt; 0.4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Δ$R_{ll}$ &gt; 0.4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1492</td>\n",
+       "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>$H_{T}$ Cut</td>\n",
-       "      <td>15</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2</td>\n",
+       "      <td>86</td>\n",
+       "      <td>1485</td>\n",
+       "      <td>232</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Selection Cut (3b3l)  ttW+j  ttZ+j   tZj\n",
-       "0        Input Event Size  10000   5000  5000\n",
-       "1          3b3l Signature     29     44     6\n",
-       "2           Jet Selection     15     36     3\n",
-       "3        lepton Selection     15     34     2\n",
-       "4  $E_{T}^{miss}$ > 30GeV     15     28     2\n",
-       "5         Δ$R_{bl}$ > 0.4     15     28     2\n",
-       "6         Δ$R_{bb}$ > 0.4     15     28     2\n",
-       "7         Δ$R_{ll}$ > 0.4     15     22     2\n",
-       "8             $H_{T}$ Cut     15     22     2"
+       "     Selection Cut (3b3l)  ttW+j     4t  ttZ+j\n",
+       "0        Input Event Size  50000  50000  50000\n",
+       "1          3b3l Signature    153   2717    481\n",
+       "2           Jet Selection    109   1748    315\n",
+       "3        lepton Selection    100   1704    302\n",
+       "4  $E_{T}^{miss}$ > 30GeV     95   1592    254\n",
+       "5         Δ$R_{bl}$ > 0.4     95   1592    254\n",
+       "6         Δ$R_{bb}$ > 0.4     95   1592    254\n",
+       "7         Δ$R_{ll}$ > 0.4     89   1492    234\n",
+       "8             $H_{T}$ Cut     86   1485    232"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,15 +331,15 @@
     "        r'$H_{T}$ Cut']\n",
     "fd = pd.DataFrame({'Selection Cut (3b3l)': name,\n",
     "                   'ttW+j': ttW[0],\n",
+    "                   '4t': tttt[0],\n",
     "                   'ttZ+j': ttZ[0],\n",
-    "                   'tZj': tZj[0],\n",
     "                   })\n",
     "fd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -363,59 +364,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Selection Cut (3b3l)</th>\n",
-       "      <th>ttW+j</th>\n",
        "      <th>ttZ+j</th>\n",
-       "      <th>tZj</th>\n",
+       "      <th>tttt</th>\n",
+       "      <th>ttW+j</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Cross Section from MadGraph Generation (fb)</td>\n",
-       "      <td>44.970000</td>\n",
-       "      <td>16.590000</td>\n",
-       "      <td>12.890000</td>\n",
+       "      <td>16.870000</td>\n",
+       "      <td>0.613300</td>\n",
+       "      <td>3.944000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Selection Efficiency</td>\n",
-       "      <td>0.001500</td>\n",
-       "      <td>0.004400</td>\n",
-       "      <td>0.000400</td>\n",
+       "      <td>0.004640</td>\n",
+       "      <td>0.029700</td>\n",
+       "      <td>0.001720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Cross Section after Selection Cut (fb)</td>\n",
-       "      <td>0.067455</td>\n",
-       "      <td>0.072996</td>\n",
-       "      <td>0.005156</td>\n",
+       "      <td>0.078277</td>\n",
+       "      <td>0.018215</td>\n",
+       "      <td>0.006784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Uncertainty</td>\n",
-       "      <td>0.000387</td>\n",
-       "      <td>0.000936</td>\n",
-       "      <td>0.000283</td>\n",
+       "      <td>0.000304</td>\n",
+       "      <td>0.000759</td>\n",
+       "      <td>0.000185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NLO Cross Section after timing its k factor</td>\n",
+       "      <td>0.122112</td>\n",
+       "      <td>0.037159</td>\n",
+       "      <td>0.009158</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Selection Cut (3b3l)      ttW+j      ttZ+j  \\\n",
-       "0  Cross Section from MadGraph Generation (fb)  44.970000  16.590000   \n",
-       "1                         Selection Efficiency   0.001500   0.004400   \n",
-       "2       Cross Section after Selection Cut (fb)   0.067455   0.072996   \n",
-       "3                                  Uncertainty   0.000387   0.000936   \n",
-       "\n",
-       "         tZj  \n",
-       "0  12.890000  \n",
-       "1   0.000400  \n",
-       "2   0.005156  \n",
-       "3   0.000283  "
+       "                          Selection Cut (3b3l)      ttZ+j      tttt     ttW+j\n",
+       "0  Cross Section from MadGraph Generation (fb)  16.870000  0.613300  3.944000\n",
+       "1                         Selection Efficiency   0.004640  0.029700  0.001720\n",
+       "2       Cross Section after Selection Cut (fb)   0.078277  0.018215  0.006784\n",
+       "3                                  Uncertainty   0.000304  0.000759  0.000185\n",
+       "4  NLO Cross Section after timing its k factor   0.122112  0.037159  0.009158"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,18 +427,19 @@
     "name2 = ['Cross Section from MadGraph Generation (fb)',\n",
     "         'Selection Efficiency',\n",
     "         'Cross Section after Selection Cut (fb)',\n",
-    "         'Uncertainty']\n",
+    "         'Uncertainty',\n",
+    "         'NLO Cross Section after timing its k factor']\n",
     "fd = pd.DataFrame({'Selection Cut (3b3l)': name2,\n",
-    "                   'ttW+j': ttW[1],\n",
     "                   'ttZ+j': ttZ[1],\n",
-    "                   'tZj': tZj[1],\n",
+    "                   'tttt': tttt[1],\n",
+    "                   'ttW+j': ttW[1],\n",
     "                   })\n",
     "fd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -459,8 +463,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>$M_{H}$</th>\n",
-       "      <th>Signal Cross Section in Paper (fb)</th>\n",
+       "      <th>Background</th>\n",
+       "      <th>Cross Section in Paper (fb)</th>\n",
        "      <th>My Result (fb)</th>\n",
        "      <th>Uncertainty</th>\n",
        "    </tr>\n",
@@ -470,35 +474,35 @@
        "      <th>0</th>\n",
        "      <td>ttW+j</td>\n",
        "      <td>0.0017</td>\n",
-       "      <td>0.067455</td>\n",
-       "      <td>0.000387</td>\n",
+       "      <td>0.003727</td>\n",
+       "      <td>0.000264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ttZ+j</td>\n",
        "      <td>0.0205</td>\n",
-       "      <td>0.072996</td>\n",
-       "      <td>0.000936</td>\n",
+       "      <td>0.113360</td>\n",
+       "      <td>0.000334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>tZ+j</td>\n",
        "      <td>0.0002</td>\n",
-       "      <td>0.005156</td>\n",
-       "      <td>0.000283</td>\n",
+       "      <td>0.007820</td>\n",
+       "      <td>0.000092</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  $M_{H}$  Signal Cross Section in Paper (fb)  My Result (fb)  Uncertainty\n",
-       "0   ttW+j                              0.0017        0.067455     0.000387\n",
-       "1   ttZ+j                              0.0205        0.072996     0.000936\n",
-       "2    tZ+j                              0.0002        0.005156     0.000283"
+       "  Background  Cross Section in Paper (fb)  My Result (fb)  Uncertainty\n",
+       "0      ttW+j                       0.0017        0.003727     0.000264\n",
+       "1      ttZ+j                       0.0205        0.113360     0.000334\n",
+       "2       tZ+j                       0.0002        0.007820     0.000092"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,15 +514,22 @@
     "     'tZ+j',\n",
     "]\n",
     "n1 = [0.0017, 0.0205, 0.0002]\n",
-    "n2 = [ttW[-1][-2], ttZ[-1][-2], tZj[-1][-2]]\n",
-    "uf = [ttW[1][-1], ttZ[1][-1], tZj[1][-1]]\n",
-    "fd = pd.DataFrame({r'$M_{H}$': name,\n",
-    "    'Signal Cross Section in Paper (fb)': n1,\n",
+    "n2 = [ttW1[-1][-1], ttZ[-1][-1], tZj[-1][-1]]\n",
+    "uf = [ttW1[1][-2], ttZ[1][-2], tZj[1][-2]]\n",
+    "fd = pd.DataFrame({r'Background': name,\n",
+    "    'Cross Section in Paper (fb)': n1,\n",
     "                   'My Result (fb)': n2,\n",
     "                   'Uncertainty': uf\n",
     "                   })\n",
     "fd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
