--- a/Background/Background.ipynb
+++ b/Background/Background.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -473,23 +473,23 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ttW+j</td>\n",
-       "      <td>0.0017</td>\n",
-       "      <td>0.003727</td>\n",
-       "      <td>0.000264</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.122112</td>\n",
+       "      <td>0.000304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ttZ+j</td>\n",
-       "      <td>0.0205</td>\n",
-       "      <td>0.113360</td>\n",
-       "      <td>0.000334</td>\n",
+       "      <td>4t</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>0.037159</td>\n",
+       "      <td>0.000759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>tZ+j</td>\n",
-       "      <td>0.0002</td>\n",
-       "      <td>0.007820</td>\n",
-       "      <td>0.000092</td>\n",
+       "      <td>ttZ+j</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>0.009158</td>\n",
+       "      <td>0.000185</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -497,12 +497,12 @@
       ],
       "text/plain": [
        "  Background  Cross Section in Paper (fb)  My Result (fb)  Uncertainty\n",
-       "0      ttW+j                       0.0017        0.003727     0.000264\n",
-       "1      ttZ+j                       0.0205        0.113360     0.000334\n",
-       "2       tZ+j                       0.0002        0.007820     0.000092"
+       "0      ttW+j                        0.135        0.122112     0.000304\n",
+       "1         4t                        0.105        0.037159     0.000759\n",
+       "2      ttZ+j                        0.011        0.009158     0.000185"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,12 +510,12 @@
    "source": [
     "name = [\n",
     "     'ttW+j',\n",
+    "     '4t',\n",
     "     'ttZ+j',\n",
-    "     'tZ+j',\n",
     "]\n",
-    "n1 = [0.0017, 0.0205, 0.0002]\n",
-    "n2 = [ttW1[-1][-1], ttZ[-1][-1], tZj[-1][-1]]\n",
-    "uf = [ttW1[1][-2], ttZ[1][-2], tZj[1][-2]]\n",
+    "n1 = [0.135, 0.105, 0.011]\n",
+    "n2 = [ttZ[-1][-1], tttt[-1][-1], ttW[-1][-1]]\n",
+    "uf = [ttZ[1][-2], tttt[1][-2], ttW[1][-2]]\n",
     "fd = pd.DataFrame({r'Background': name,\n",
     "    'Cross Section in Paper (fb)': n1,\n",
     "                   'My Result (fb)': n2,\n",
