--- a/Background/Background.ipynb
+++ b/Background/Background.ipynb
@@ -158,37 +158,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8870/8870 [00:09<00:00, 888.97it/s] \n",
-      "100%|██████████| 153/153 [00:00<00:00, 549.42it/s]\n",
-      "100%|██████████| 109/109 [00:00<00:00, 252.15it/s]\n",
-      "100%|██████████| 100/100 [00:00<00:00, 1612.07it/s]\n",
-      "100%|██████████| 95/95 [00:00<00:00, 462.93it/s]\n",
-      "100%|██████████| 95/95 [00:00<00:00, 127.39it/s]\n",
-      "100%|██████████| 95/95 [00:00<00:00, 180.95it/s]\n",
-      "100%|██████████| 89/89 [00:00<00:00, 1671.37it/s]\n",
-      "100%|██████████| 10560/10560 [00:11<00:00, 953.56it/s] \n",
-      "100%|██████████| 481/481 [00:01<00:00, 435.67it/s]\n",
-      "100%|██████████| 315/315 [00:01<00:00, 234.92it/s]\n",
-      "100%|██████████| 302/302 [00:00<00:00, 792.91it/s]\n",
-      "100%|██████████| 254/254 [00:00<00:00, 291.77it/s]\n",
-      "100%|██████████| 254/254 [00:02<00:00, 97.50it/s] \n",
-      "100%|██████████| 254/254 [00:01<00:00, 148.50it/s]\n",
-      "100%|██████████| 234/234 [00:00<00:00, 1971.01it/s]\n",
-      "100%|██████████| 6717/6717 [00:08<00:00, 768.08it/s] \n",
-      "100%|██████████| 2717/2717 [00:07<00:00, 385.91it/s]\n",
-      "100%|██████████| 1748/1748 [00:07<00:00, 225.77it/s]\n",
-      "100%|██████████| 1704/1704 [00:01<00:00, 1280.42it/s]\n",
-      "100%|██████████| 1592/1592 [00:04<00:00, 386.26it/s]\n",
-      "100%|██████████| 1592/1592 [00:12<00:00, 126.20it/s]\n",
-      "100%|██████████| 1592/1592 [00:08<00:00, 188.05it/s]\n",
-      "100%|██████████| 1492/1492 [00:00<00:00, 2028.14it/s]\n"
+      "100%|██████████| 8870/8870 [00:08<00:00, 1032.73it/s]\n",
+      "100%|██████████| 153/153 [00:00<00:00, 487.46it/s]\n",
+      "100%|██████████| 109/109 [00:00<00:00, 351.10it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 1207.09it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 391.58it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 150.52it/s]\n",
+      "100%|██████████| 95/95 [00:00<00:00, 191.91it/s]\n",
+      "100%|██████████| 89/89 [00:00<00:00, 1709.69it/s]\n",
+      "100%|██████████| 10560/10560 [00:09<00:00, 1056.22it/s]\n",
+      "100%|██████████| 481/481 [00:01<00:00, 445.84it/s]\n",
+      "100%|██████████| 315/315 [00:00<00:00, 353.40it/s]\n",
+      "100%|██████████| 302/302 [00:00<00:00, 1225.95it/s]\n",
+      "100%|██████████| 254/254 [00:00<00:00, 416.91it/s]\n",
+      "100%|██████████| 254/254 [00:01<00:00, 140.43it/s]\n",
+      "100%|██████████| 254/254 [00:01<00:00, 190.68it/s]\n",
+      "100%|██████████| 234/234 [00:00<00:00, 1967.81it/s]\n",
+      "100%|██████████| 6717/6717 [00:06<00:00, 1006.15it/s]\n",
+      "100%|██████████| 2717/2717 [00:05<00:00, 505.76it/s]\n",
+      "100%|██████████| 1748/1748 [00:05<00:00, 344.10it/s]\n",
+      "100%|██████████| 1704/1704 [00:01<00:00, 1213.75it/s]\n",
+      "100%|██████████| 1592/1592 [00:03<00:00, 431.04it/s]\n",
+      "100%|██████████| 1592/1592 [00:10<00:00, 144.92it/s]\n",
+      "100%|██████████| 1592/1592 [00:08<00:00, 195.12it/s]\n",
+      "100%|██████████| 1492/1492 [00:00<00:00, 1869.77it/s]\n"
      ]
     }
    ],
@@ -196,14 +196,49 @@
     "y1 = uproot.open('../root/MG5_aMC_v2_7_3/ttW/Events/run_04/tag_1_delphes_events.root')\n",
     "y2 = uproot.open('../root/MG5_aMC_v2_7_3/ttZ/Events/run_03/tag_1_delphes_events.root')\n",
     "y3 = uproot.open('../root/MG5_aMC_v2_7_3/tttt/Events/run_01/tag_1_delphes_events.root')\n",
-    "ttW = function(y1, 0.003944, 1.35)\n",
+    "ttW = function(y1, 0.004573, 1.35)\n",
     "ttZ = function(y2, 0.01687, 1.56)\n",
     "tttt = function (y3, 0.0006133, 2.04)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2184/2184 [00:02<00:00, 913.65it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 451.09it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 297.98it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 918.83it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 359.08it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 131.21it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 161.46it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 1298.32it/s]\n",
+      "100%|██████████| 11604/11604 [00:11<00:00, 979.38it/s] \n",
+      "100%|██████████| 594/594 [00:01<00:00, 354.56it/s]\n",
+      "100%|██████████| 399/399 [00:01<00:00, 285.32it/s]\n",
+      "100%|██████████| 369/369 [00:00<00:00, 1008.69it/s]\n",
+      "100%|██████████| 307/307 [00:00<00:00, 426.95it/s]\n",
+      "100%|██████████| 307/307 [00:02<00:00, 138.96it/s]\n",
+      "100%|██████████| 307/307 [00:01<00:00, 203.95it/s]\n",
+      "100%|██████████| 288/288 [00:00<00:00, 1419.80it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y4 = uproot.open('../root/MG5_aMC_v2_7_3/ttW1/Events/run_01/tag_1_delphes_events.root')\n",
+    "y5 = uproot.open('../root/MG5_aMC_v2_7_3/ttZ1/Events/run_01/tag_1_delphes_events.root')\n",
+    "ttW1 = function(y4, 0.003944, 1.35)\n",
+    "ttZ1 = function(y5, 0.01293, 1.56)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +263,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Selection Cut (3b3l)</th>\n",
-       "      <th>ttW+j</th>\n",
-       "      <th>4t</th>\n",
        "      <th>ttZ+j</th>\n",
+       "      <th>4t</th>\n",
+       "      <th>ttW+j</th>\n",
+       "      <th>ttZ</th>\n",
+       "      <th>ttW</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -240,81 +277,99 @@
        "      <td>50000</td>\n",
        "      <td>50000</td>\n",
        "      <td>50000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3b3l Signature</td>\n",
-       "      <td>153</td>\n",
-       "      <td>2717</td>\n",
        "      <td>481</td>\n",
+       "      <td>2717</td>\n",
+       "      <td>153</td>\n",
+       "      <td>594</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Jet Selection</td>\n",
-       "      <td>109</td>\n",
-       "      <td>1748</td>\n",
        "      <td>315</td>\n",
+       "      <td>1748</td>\n",
+       "      <td>109</td>\n",
+       "      <td>399</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>lepton Selection</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1704</td>\n",
        "      <td>302</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>100</td>\n",
+       "      <td>369</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>$E_{T}^{miss}$ &gt; 30GeV</td>\n",
-       "      <td>95</td>\n",
-       "      <td>1592</td>\n",
        "      <td>254</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>95</td>\n",
+       "      <td>307</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Δ$R_{bl}$ &gt; 0.4</td>\n",
-       "      <td>95</td>\n",
-       "      <td>1592</td>\n",
        "      <td>254</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>95</td>\n",
+       "      <td>307</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Δ$R_{bb}$ &gt; 0.4</td>\n",
-       "      <td>95</td>\n",
-       "      <td>1592</td>\n",
        "      <td>254</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>95</td>\n",
+       "      <td>307</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Δ$R_{ll}$ &gt; 0.4</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1492</td>\n",
        "      <td>234</td>\n",
+       "      <td>1492</td>\n",
+       "      <td>89</td>\n",
+       "      <td>288</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>$H_{T}$ Cut</td>\n",
-       "      <td>86</td>\n",
-       "      <td>1485</td>\n",
        "      <td>232</td>\n",
+       "      <td>1485</td>\n",
+       "      <td>86</td>\n",
+       "      <td>281</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Selection Cut (3b3l)  ttW+j     4t  ttZ+j\n",
-       "0        Input Event Size  50000  50000  50000\n",
-       "1          3b3l Signature    153   2717    481\n",
-       "2           Jet Selection    109   1748    315\n",
-       "3        lepton Selection    100   1704    302\n",
-       "4  $E_{T}^{miss}$ > 30GeV     95   1592    254\n",
-       "5         Δ$R_{bl}$ > 0.4     95   1592    254\n",
-       "6         Δ$R_{bb}$ > 0.4     95   1592    254\n",
-       "7         Δ$R_{ll}$ > 0.4     89   1492    234\n",
-       "8             $H_{T}$ Cut     86   1485    232"
+       "     Selection Cut (3b3l)  ttZ+j     4t  ttW+j    ttZ    ttW\n",
+       "0        Input Event Size  50000  50000  50000  50000  10000\n",
+       "1          3b3l Signature    481   2717    153    594     20\n",
+       "2           Jet Selection    315   1748    109    399     12\n",
+       "3        lepton Selection    302   1704    100    369     12\n",
+       "4  $E_{T}^{miss}$ > 30GeV    254   1592     95    307     10\n",
+       "5         Δ$R_{bl}$ > 0.4    254   1592     95    307     10\n",
+       "6         Δ$R_{bb}$ > 0.4    254   1592     95    307     10\n",
+       "7         Δ$R_{ll}$ > 0.4    234   1492     89    288      9\n",
+       "8             $H_{T}$ Cut    232   1485     86    281      7"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,16 +385,18 @@
     "        r'Δ$R_{ll}$ > 0.4',\n",
     "        r'$H_{T}$ Cut']\n",
     "fd = pd.DataFrame({'Selection Cut (3b3l)': name,\n",
-    "                   'ttW+j': ttW[0],\n",
-    "                   '4t': tttt[0],\n",
     "                   'ttZ+j': ttZ[0],\n",
+    "                   '4t': tttt[0],\n",
+    "                   'ttW+j': ttW[0],\n",
+    "                   'ttZ': ttZ1[0],\n",
+    "                   'ttW': ttW1[0]\n",
     "                   })\n",
     "fd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +424,8 @@
        "      <th>ttZ+j</th>\n",
        "      <th>tttt</th>\n",
        "      <th>ttW+j</th>\n",
+       "      <th>ttZ</th>\n",
+       "      <th>ttW</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -375,6 +434,8 @@
        "      <td>Cross Section from MadGraph Generation (fb)</td>\n",
        "      <td>16.870000</td>\n",
        "      <td>0.613300</td>\n",
+       "      <td>4.573000</td>\n",
+       "      <td>12.930000</td>\n",
        "      <td>3.944000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -383,13 +444,17 @@
        "      <td>0.004640</td>\n",
        "      <td>0.029700</td>\n",
        "      <td>0.001720</td>\n",
+       "      <td>0.005620</td>\n",
+       "      <td>0.000700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Cross Section after Selection Cut (fb)</td>\n",
        "      <td>0.078277</td>\n",
        "      <td>0.018215</td>\n",
-       "      <td>0.006784</td>\n",
+       "      <td>0.007866</td>\n",
+       "      <td>0.072667</td>\n",
+       "      <td>0.002761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -397,28 +462,39 @@
        "      <td>0.000304</td>\n",
        "      <td>0.000759</td>\n",
        "      <td>0.000185</td>\n",
+       "      <td>0.000334</td>\n",
+       "      <td>0.000264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>NLO Cross Section after timing its k factor</td>\n",
        "      <td>0.122112</td>\n",
        "      <td>0.037159</td>\n",
-       "      <td>0.009158</td>\n",
+       "      <td>0.010619</td>\n",
+       "      <td>0.113360</td>\n",
+       "      <td>0.003727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Selection Cut (3b3l)      ttZ+j      tttt     ttW+j\n",
-       "0  Cross Section from MadGraph Generation (fb)  16.870000  0.613300  3.944000\n",
-       "1                         Selection Efficiency   0.004640  0.029700  0.001720\n",
-       "2       Cross Section after Selection Cut (fb)   0.078277  0.018215  0.006784\n",
-       "3                                  Uncertainty   0.000304  0.000759  0.000185\n",
-       "4  NLO Cross Section after timing its k factor   0.122112  0.037159  0.009158"
+       "                          Selection Cut (3b3l)      ttZ+j      tttt     ttW+j  \\\n",
+       "0  Cross Section from MadGraph Generation (fb)  16.870000  0.613300  4.573000   \n",
+       "1                         Selection Efficiency   0.004640  0.029700  0.001720   \n",
+       "2       Cross Section after Selection Cut (fb)   0.078277  0.018215  0.007866   \n",
+       "3                                  Uncertainty   0.000304  0.000759  0.000185   \n",
+       "4  NLO Cross Section after timing its k factor   0.122112  0.037159  0.010619   \n",
+       "\n",
+       "         ttZ       ttW  \n",
+       "0  12.930000  3.944000  \n",
+       "1   0.005620  0.000700  \n",
+       "2   0.072667  0.002761  \n",
+       "3   0.000334  0.000264  \n",
+       "4   0.113360  0.003727  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,13 +509,15 @@
     "                   'ttZ+j': ttZ[1],\n",
     "                   'tttt': tttt[1],\n",
     "                   'ttW+j': ttW[1],\n",
+    "                   'ttZ': ttZ1[1],\n",
+    "                   'ttW': ttW1[1]\n",
     "                   })\n",
     "fd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -465,16 +543,18 @@
        "      <th></th>\n",
        "      <th>Background</th>\n",
        "      <th>Cross Section in Paper (fb)</th>\n",
-       "      <th>My Result (fb)</th>\n",
+       "      <th>My Result with jet addition</th>\n",
+       "      <th>My Result without jet addition</th>\n",
        "      <th>Uncertainty</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ttW+j</td>\n",
+       "      <td>ttZ</td>\n",
        "      <td>0.135</td>\n",
        "      <td>0.122112</td>\n",
+       "      <td>0.113360</td>\n",
        "      <td>0.000304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -482,13 +562,15 @@
        "      <td>4t</td>\n",
        "      <td>0.105</td>\n",
        "      <td>0.037159</td>\n",
+       "      <td>0.037159</td>\n",
        "      <td>0.000759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ttZ+j</td>\n",
+       "      <td>ttW</td>\n",
        "      <td>0.011</td>\n",
-       "      <td>0.009158</td>\n",
+       "      <td>0.010619</td>\n",
+       "      <td>0.003727</td>\n",
        "      <td>0.000185</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -496,29 +578,36 @@
        "</div>"
       ],
       "text/plain": [
-       "  Background  Cross Section in Paper (fb)  My Result (fb)  Uncertainty\n",
-       "0      ttW+j                        0.135        0.122112     0.000304\n",
-       "1         4t                        0.105        0.037159     0.000759\n",
-       "2      ttZ+j                        0.011        0.009158     0.000185"
+       "  Background  Cross Section in Paper (fb)  My Result with jet addition  \\\n",
+       "0        ttZ                        0.135                     0.122112   \n",
+       "1         4t                        0.105                     0.037159   \n",
+       "2        ttW                        0.011                     0.010619   \n",
+       "\n",
+       "   My Result without jet addition  Uncertainty  \n",
+       "0                        0.113360     0.000304  \n",
+       "1                        0.037159     0.000759  \n",
+       "2                        0.003727     0.000185  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = [\n",
-    "     'ttW+j',\n",
+    "     'ttZ',\n",
     "     '4t',\n",
-    "     'ttZ+j',\n",
+    "     'ttW',\n",
     "]\n",
     "n1 = [0.135, 0.105, 0.011]\n",
     "n2 = [ttZ[-1][-1], tttt[-1][-1], ttW[-1][-1]]\n",
+    "n3 = [ttZ1[-1][-1], tttt[-1][-1], ttW1[-1][-1]]\n",
     "uf = [ttZ[1][-2], tttt[1][-2], ttW[1][-2]]\n",
     "fd = pd.DataFrame({r'Background': name,\n",
     "    'Cross Section in Paper (fb)': n1,\n",
-    "                   'My Result (fb)': n2,\n",
+    "                   'My Result with jet addition': n2,\n",
+    "                   'My Result without jet addition': n3,\n",
     "                   'Uncertainty': uf\n",
     "                   })\n",
     "fd"
